# lmstudio-agent-mcp

./: .dockerignore  .gitignore  Architecture_Daigram.excalidraw  CATALOG.md  README.md  SETUP.md  bootstrap.sh
agent/: lmstudio_bridge.py  local_agent.py
config/: lmstudio-system-prompt.md  mcp.json  memory-system-prompt.md  optional-with-keys.json
docker/: .env.example  Dockerfile  docker-compose.yml
lmstudio/: CATALOG.md  README.md  SETUP.md  bootstrap.sh  install.sh  pyproject.toml  requirements.txt  setup.sh
lmstudio/agent/: embeddings.py  lmstudio_bridge.py  local_agent.py  memory_context.py  procedural_memory.py  rag_context.py  summarizer_core.py  triage_core.py  vector_memory.py
lmstudio/config/: README.md  mcp.json  memory-system-prompt.md  memory.json  optional-with-keys.json  procedural.json  triage.json  user-identity.json
lmstudio/docs/: DOCKER.md  SERVERS.md  TOOL-FLOWS.md
lmstudio/docs/servers/: codebase-memory.md  coding-tools.md  context7.md  docker-tools.md  git.md  github-watch.md  github.md  memory-rag.md  memory.md  playwright.md  procedural.md  sequential-thinking.md  think-delegate.md  time.md  triage.md  web-tools.md
lmstudio/mcp/: mcp.json  optional-with-keys.json
lmstudio/scripts/: install_to_lmstudio.py  seed_memory.py  setup_github.sh  setup_think_delegate.sh  test_agent_stack.py  test_architecture_e2e.py  verify_vector_db.py
lmstudio/servers/: README.md  coding_tools.py  github_watch_tools.py  memory_rag_tools.py  procedural_tools.py  think_delegate.py  triage_tools.py
lmstudio/skills/: Skill.md
mcp_server/: web_tools.py  (+3 more)
(+27 files in other folders)
